--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Git</title>
 </head>
 <body>
-    <h1>hello wasi</h1>
-    <h1> how you friend</h1>
+    <h1>wellcom to our website</h1>
+    <p> omor faruk</p>
 </body>
 </html>
