--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>wellcom to our website</h1>
-    <p> omor faruk</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis dolor cum ipsa quae sed nihil labore nostrum, sequi est consectetur quas id suscipit. Dolores vero optio, ratione itaque porro eius.</p>
 </body>
 </html>
